--- a/porto.html
+++ b/porto.html
@@ -15,8 +15,7 @@
 </head>
 
 <body>
-    <video loop autoplay muted class="fullscreen-bg"
-        src="vid/vid-bg.mp4"></video>
+    <video loop autoplay muted class="fullscreen-bg" src="vid/vid-bg.mp4"></video>
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg fixed-top" style="background-color: rgb(255, 255, 255);">
         <div class="container-fluid">
@@ -36,14 +35,19 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#skill">Skill's</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#project">Project</a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             Media Social
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="https://www.instagram.com/johncalvi.nn/">Instagram</a></li>
-                            <li><a class="dropdown-item" href="https://www.facebook.com/john.calvin.1232/">Facebook</a></li>
+                            <li><a class="dropdown-item" href="https://www.instagram.com/johncalvi.nn/">Instagram</a>
+                            </li>
+                            <li><a class="dropdown-item" href="https://www.facebook.com/john.calvin.1232/">Facebook</a>
+                            </li>
                             <li><a class="dropdown-item" href="https://github.com/Fr3ezy">Github</a></li>
                         </ul>
                     </li>
@@ -66,25 +70,32 @@
     <section id="aboutme">
         <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
             <li class="nav-item" role="presentation">
-              <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Where I From ???</button>
+                <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home"
+                    type="button" role="tab" aria-controls="pills-home" aria-selected="true">Where I From ???</button>
             </li>
             <li class="nav-item" role="presentation">
-              <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Profile</button>
+                <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile"
+                    type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Profile</button>
             </li>
             <li class="nav-item" role="presentation">
-              <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Contact</button>
+                <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact"
+                    type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Contact</button>
             </li>
-          </ul>
-          <div class="tab-content" id="pills-tabContent" style="color: white;">
-            <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab"> 
+        </ul>
+        <div class="tab-content" id="pills-tabContent" style="color: white;">
+            <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
                 <h2 style="color: bisque;">I'm From Pekalongan City, Indonesia</h2>
                 <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63375.286073976764!2d109.63939800239498!3d-6.895940718063823!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e70242ca490fe13%3A0xc0c68a126b258cb6!2sPekalongan%2C%20Kota%20Pekalongan%2C%20Jawa%20Tengah!5e0!3m2!1sid!2sid!4v1665133251232!5m2!1sid!2sid" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63375.286073976764!2d109.63939800239498!3d-6.895940718063823!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e70242ca490fe13%3A0xc0c68a126b258cb6!2sPekalongan%2C%20Kota%20Pekalongan%2C%20Jawa%20Tengah!5e0!3m2!1sid!2sid!4v1665133251232!5m2!1sid!2sid"
+                    width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
             <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
-                <span>Hello everyone i'm John Calvin Widianto, who like design and computer. 
-                <br>Pekalongan is city where i born and grow, i live at Pekalongan until senior sigh school before i studied at Bina Nusantara University. 
-                <br>I like to play computer and like to solve the problem what i found.</span></div>
+                <span>Hello everyone i'm John Calvin Widianto, who like design and computer.
+                    <br>Pekalongan is city where i born and grow, i live at Pekalongan until senior sigh school before i
+                    studied at Bina Nusantara University.
+                    <br>I like to play computer and like to solve the problem what i found.</span>
+            </div>
             <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
                 <div class="container mb-5 mt-5 justify-content-center">
                     <div class="row text-center">
@@ -92,29 +103,32 @@
                             <h2>Contact me here..</h2>
                         </div>
                         <div class="col-md-4 align-self-start">
-                            <a href="mailto:calvinjohn810@yahoo.com"><img width="40%" src="img/email.png" alt="main email"></a>
+                            <a href="mailto:calvinjohn810@yahoo.com"><img width="40%" src="img/email.png"
+                                    alt="main email"></a>
                             <h4>Main Email</h4>
                         </div>
                         <div class="col-md-4 align-self-center">
-                            <a href="mailto:john.widianto@binus.ac.id"><img width="40%" src="img/email.png" alt="student email"></a>
+                            <a href="mailto:john.widianto@binus.ac.id"><img width="40%" src="img/email.png"
+                                    alt="student email"></a>
                             <h4>Student Email</h4>
                         </div>
                         <div class="col-md-4 align-self-end">
-                            <a href="https://www.linkedin.com/in/john-calvin-widianto"><img width="40%" src="img/linkedin.png" alt="linkedin acc"></a>
+                            <a href="https://www.linkedin.com/in/john-calvin-widianto"><img width="40%"
+                                    src="img/linkedin.png" alt="linkedin acc"></a>
                             <h4>LinkedIn</h4>
                         </div>
                     </div>
                 </div>
             </div>
-          </div>
+        </div>
     </section>
 
     <!-- Colloum skill -->
     <section id="skill">
         <div class="container mb-5 mt-5 justify-content-center">
             <div class="row text-center">
-                <div class="row mb-4">
-                    <h2>Some Skill's</h2>
+                <div class="col-mb-4">
+                    <h2 style="color: rgba(123, 255, 0, 0.588);">Some Skill's</h2>
                 </div>
                 <div class="col-md-4 align-self-start">
                     <img width="40%" src="img/photoshop.png" alt="logo psd">
@@ -131,10 +145,37 @@
             </div>
         </div>
     </section>
-    
+
+    <!-- Colloum Project -->
+    <section id="project">
+        <div class="d-flex container mb-5 mt-5">
+            <div class="row text-center justify-content-evenly">
+                <div class="row mb-4">
+                    <h2 style="color: rgba(123, 255, 0, 0.588);">This is some project i've made when in college</h2>
+                </div>
+                <div class="col-md-4">
+                    <a
+                        href="https://www.figma.com/proto/9gyxHzAnVNlMI3xUThNmmy/redesign-pegipegi.com-kelompok-12?page-id=0%3A1&node-id=2%3A4&viewport=366%2C484%2C0.04&scaling=min-zoom&starting-point-node-id=2%3A4"><img
+                            width="40%" src="img/files.png" alt="file1">
+                    </a>
+                    <h3>Redesign web Pegipegi.com</h3>
+                </div>
+                <div class="col-md-4">
+                    <a href="https://maboling.shennx.net/index.html"><img width="40%" src="img/files.png" alt="files2">
+                    </a>
+                    <h3>Make web Maboling
+                        <br> (Entrepreneurship)
+                    </h3>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- footer -->
     <footer class="pb-3 bg-black">
-        <p style="text-align: center; background-color: #00000036; color: white;">Created by <a style="font-weight: bold;" href="https://www.instagram.com/johncalvi.nn/">John Calvin</a> and with full of <i class="bi bi-balloon-heart-fill text-danger"></i></p>
+        <p style="text-align: center; background-color: #00000036; color: white;">Created by <a
+                style="font-weight: bold;" href="https://www.instagram.com/johncalvi.nn/">John Calvin</a> and with full
+            of <i class="bi bi-balloon-heart-fill text-danger"></i></p>
     </footer>
     <!-- footer -->
 
