--- a/porto.html
+++ b/porto.html
@@ -74,6 +74,10 @@
                     type="button" role="tab" aria-controls="pills-home" aria-selected="true">Where I From ???</button>
             </li>
             <li class="nav-item" role="presentation">
+                <button class="nav-link" id="pills-cv-tab" data-bs-toggle="pill" data-bs-target="#pills-cv"
+                    type="button" role="tab" aria-controls="pills-cv" aria-selected="false">CV</button>
+            </li>
+            <li class="nav-item" role="presentation">
                 <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile"
                     type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Profile</button>
             </li>
@@ -90,7 +94,11 @@
                     width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-            <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+            <div class="tab-pane fade text-center" id="pills-cv" role="tabpanel" aria-labelledby="pills-cv-tab">
+                <span>You can download My CV
+                    <a href="https://binusianorg-my.sharepoint.com/personal/john_widianto_binus_ac_id/_layouts/15/guestaccess.aspx?docid=0a04c13035dbd48b8aa193b41e6ee5e3b&authkey=ATpgb_wSKVAWcNfnfN0iJMg&e=GRPJRt">here<br><i class="bi bi-file-earmark-pdf"></i></a></span>
+            </div>
+            <div class="tab-pane fade text-center" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
                 <span>Hello everyone i'm John Calvin Widianto, who like design and computer.
                     <br>Pekalongan is city where i born and grow, i live at Pekalongan until senior sigh school before i
                     studied at Bina Nusantara University.
