--- a/porto.html
+++ b/porto.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="css/porto.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- link icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <!-- icon -->
@@ -17,7 +18,7 @@
 <body>
     <video loop autoplay muted class="fullscreen-bg" src="vid/vid-bg.mp4"></video>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg fixed-top" style="background-color: rgb(255, 255, 255);">
+    <nav class="navbar navbar-expand-lg fixed-top" style="background-color: white;">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">John Calvin Portofolio |</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -27,28 +28,28 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link hover" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#aboutme">About Me</a>
+                        <a class="nav-link hover" href="#aboutme">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#skill">Skill's</a>
+                        <a class="nav-link hover" href="#skill">Skill's</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#project">Project</a>
+                        <a class="nav-link hover" href="#project">Project</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        <a class="nav-link hover dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             Media Social
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="https://www.instagram.com/johncalvi.nn/">Instagram</a>
+                            <li><a class="dropdown-item hover" href="https://www.instagram.com/johncalvi.nn/">Instagram</a>
                             </li>
-                            <li><a class="dropdown-item" href="https://www.facebook.com/john.calvin.1232/">Facebook</a>
+                            <li><a class="dropdown-item hover" href="https://www.facebook.com/john.calvin.1232/">Facebook</a>
                             </li>
-                            <li><a class="dropdown-item" href="https://github.com/Fr3ezy">Github</a></li>
+                            <li><a class="dropdown-item hover" href="https://github.com/Fr3ezy">Github</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -60,7 +61,7 @@
     <!-- Profilepicture -->
     <section>
         <img class="img-thumbnail rounded mx-auto d-block mt-5" width="15%" src="img/foto.jpg" alt="fotopp">
-        <div style="color: white; text-align: center;">
+        <div class="text-white text-center">
             <h1>John Calvin Portofolio's</h1>
             <h3>Bina Nusantara Student</h3>
         </div>
@@ -136,7 +137,7 @@
         <div class="container mb-5 mt-5 justify-content-center">
             <div class="row text-center">
                 <div class="col-mb-4">
-                    <h2 style="color: rgba(123, 255, 0, 0.588);">Some Skill's</h2>
+                    <h2 style="color: bisque">Some Skill's</h2>
                 </div>
                 <div class="col-md-4 align-self-start">
                     <img width="40%" src="img/photoshop.png" alt="logo psd">
@@ -159,7 +160,7 @@
         <div class="d-flex container mb-5 mt-5">
             <div class="row text-center justify-content-evenly">
                 <div class="row mb-4">
-                    <h2 style="color: rgba(123, 255, 0, 0.588);">This is some project i've made when in college</h2>
+                    <h2 style="color: bisque">This is some project i've made when in college</h2>
                 </div>
                 <div class="col-md-4">
                     <a
@@ -194,6 +195,7 @@
         </a>
     </button>
     <!-- script -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
