--- a/porto.html
+++ b/porto.html
@@ -87,7 +87,7 @@
                     type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Contact</button>
             </li>
         </ul>
-        <div class="tab-content" id="pills-tabContent" style="color: white;">
+        <div class="tab-content" id="pills-tabContent" style="color: bisque;">
             <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
                 <h2 style="color: bisque;">I'm From Pekalongan City, Indonesia</h2>
                 <iframe
