--- a/porto.html
+++ b/porto.html
@@ -74,7 +74,9 @@
 
     <!-- Profilepicture -->
     <section>
-        <img class="img-thumbnail rounded mx-auto d-block mt-5" width="15%" src="img/foto.jpg" alt="fotopp">
+        <div class="card-rgb mx-auto mt-5">
+            <img class="mx-auto rounded-4" width="95%" height="95%" src="img/foto.jpg" alt="fotopp">
+        </div>
         <div class="text-white text-center">
             <h1>John Calvin Portofolio's</h1>
             <h3>Bina Nusantara Student</h3>
@@ -207,7 +209,7 @@
 
     <!-- back to top -->
     <div id="preloader"></div>
-    <button class="back-to-top d-flex align-items-center justify-content-center">
+    <button class="back-to-top">
         <a href="#" class="back-to-top d-flex align-items-center justify-content-center">
             <i text-danger class="bi bi-caret-up-square-fill"></i>
         </a>
