keluarin html biar kebaca digit

--- a/porto.html
+++ b/porto.html
@@ -15,7 +15,7 @@
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
     <!-- css -->
-    <link rel="stylesheet" href="../css/porto.css">
+    <link rel="stylesheet" href="css/porto.css">
     
     <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
     <!-- icon -->
-    <link rel="icon" href="../img/b2c8b647f285dbc9d29a87c833142419.jpg">
+    <link rel="icon" href="img/b2c8b647f285dbc9d29a87c833142419.jpg">
 
     <title>John Calvin Portofolio's</title>
 </head>
@@ -37,7 +37,7 @@
     </div> 
 
 
-    <video loop autoplay muted class="fullscreen-bg" src="../vid/vid-bg.mp4"></video>
+    <video loop autoplay muted class="fullscreen-bg" src="vid/vid-bg.mp4"></video>
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg fixed-top" style="background-color: white;">
         <div class="container-fluid">
@@ -82,7 +82,7 @@
     <!-- Profilepicture -->
     <section>
         <div class="card-rgb mx-auto mt-5">
-            <img class="mx-auto rounded-4" width="95%" height="95%" src="../img/foto.jpg" alt="fotopp">
+            <img class="mx-auto rounded-4" width="95%" height="95%" src="img/foto.jpg" alt="fotopp">
         </div>
         <div class="text-white text-center">
             <h1>John Calvin Portofolio's</h1>
@@ -120,7 +120,7 @@
             </div>
             <div class="tab-pane fade text-center" id="pills-cv" role="tabpanel" aria-labelledby="pills-cv-tab">
                 <span>You can download My CV
-                    <a href="https://binusianorg-my.sharepoint.com/personal/john_widianto_binus_ac_id/_layouts/15/guestaccess.aspx?docid=0a04c13035dbd48b8aa193b41e6ee5e3b&authkey=ATpgb_wSKVAWcNfnfN0iJMg&e=GRPJRt">here<br><img width="20%" src="../img/pdf.png"></a></span>
+                    <a href="https://binusianorg-my.sharepoint.com/personal/john_widianto_binus_ac_id/_layouts/15/guestaccess.aspx?docid=0a04c13035dbd48b8aa193b41e6ee5e3b&authkey=ATpgb_wSKVAWcNfnfN0iJMg&e=GRPJRt">here<br><img width="20%" src="img/pdf.png"></a></span>
             </div>
             <div class="tab-pane fade text-center" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
                 <span>Hello everyone i'm John Calvin Widianto, who like design and computer.
@@ -138,18 +138,18 @@
                             <h2>Contact me here..</h2>
                         </div>
                         <div class="col-md-4 align-self-start">
-                            <a href="mailto:calvinjohn810@yahoo.com"><img width="40%" src="../img/email.png"
+                            <a href="mailto:calvinjohn810@yahoo.com"><img width="40%" src="img/email.png"
                                     alt="main email"></a>
                             <h4>Main Email</h4>
                         </div>
                         <div class="col-md-4 align-self-center">
-                            <a href="mailto:john.widianto@binus.ac.id"><img width="40%" src="../img/email.png"
+                            <a href="mailto:john.widianto@binus.ac.id"><img width="40%" src="img/email.png"
                                     alt="student email"></a>
                             <h4>Student Email</h4>
                         </div>
                         <div class="col-md-4 align-self-end">
                             <a href="https://www.linkedin.com/in/john-calvin-widianto"><img width="40%"
-                                    src="../img/linkedin.png" alt="linkedin acc"></a>
+                                    src="img/linkedin.png" alt="linkedin acc"></a>
                             <h4>LinkedIn</h4>
                         </div>
                     </div>
@@ -166,15 +166,15 @@
                     <h2 style="color: bisque">Some Skill's</h2>
                 </div>
                 <div class="col-md-4 align-self-start" data-aos="zoom-in" data-aos-duration="1500">
-                    <img width="40%" src="../img/photoshop.png" alt="logo psd">
+                    <img width="40%" src="img/photoshop.png" alt="logo psd">
                     <h3>Photoshop</h3>
                 </div>
                 <div class="col-md-4 align-self-center" data-aos="zoom-in" data-aos-duration="1500">
-                    <img width="40%" src="../img/teamwork.png" alt="teamwork">
+                    <img width="40%" src="img/teamwork.png" alt="teamwork">
                     <h3>Easy Team Work</h3>
                 </div>
                 <div class="col-md-4 align-self-end" data-aos="zoom-in" data-aos-duration="1500">
-                    <img width="80%" src="../img/editing.png" alt="editing">
+                    <img width="80%" src="img/editing.png" alt="editing">
                     <h3>Like Editing & Design</h3>
                 </div>
             </div>
@@ -191,12 +191,12 @@
                 <div class="col-md-4" data-aos="fade-right">
                     <a
                         href="https://www.figma.com/proto/9gyxHzAnVNlMI3xUThNmmy/redesign-pegipegi.com-kelompok-12?page-id=0%3A1&node-id=2%3A4&viewport=366%2C484%2C0.04&scaling=min-zoom&starting-point-node-id=2%3A4"><img
-                            width="40%" src="../img/files.png" alt="file1">
+                            width="40%" src="img/files.png" alt="file1">
                     </a>
                     <h3>Redesign web Pegipegi.com</h3>
                 </div>
                 <div class="col-md-4" data-aos="fade-left">
-                    <a href="https://maboling.shennx.net/index.html"><img width="40%" src="../img/files.png" alt="files2">
+                    <a href="https://maboling.shennx.net/index.html"><img width="40%" src="img/files.png" alt="files2">
                     </a>
                     <h3>Make web Maboling
                         <br> (Entrepreneurship)
@@ -235,7 +235,7 @@
         crossorigin="anonymous">
     </script>
 
-    <script src="../js/porto.js"></script>
+    <script src="js/porto.js"></script>
 
 </body>
 
