ganti + responsive benerin

--- a/porto.html
+++ b/porto.html
@@ -86,7 +86,8 @@
         </div>
         <div class="text-white text-center">
             <h1>John Calvin Portofolio's</h1>
-            <h3>Bina Nusantara Student</h3>
+            <h3 style="color: bisque;">Bina Nusantara Student</h3>
+            <h3 style="color: bisque;">Front End Developer at PT. Dire Teknologi Bersama</h3>
         </div>
     </section>
 
@@ -181,21 +182,22 @@
         </div>
     </section>
 
+    
     <!-- Colloum Project -->
     <section id="project">
-        <div class="d-flex container mb-5 mt-5">
-            <div class="row text-center justify-content-evenly">
-                <div class="row mb-4" data-aos="fade-up">
+        <div class="container mb-5 mt-5 justify-content-center">
+            <div class="row text-center">
+                <div class="col-mb-4" data-aos="zoom-in" data-aos-duration="1000">
                     <h2 style="color: bisque">This is some project i've made when in college</h2>
                 </div>
-                <div class="col-md-4" data-aos="fade-right">
+                <div class="col-md-6 align-self-start" data-aos="zoom-in-right" data-aos-duration="1500">
                     <a
-                        href="https://www.figma.com/proto/9gyxHzAnVNlMI3xUThNmmy/redesign-pegipegi.com-kelompok-12?page-id=0%3A1&node-id=2%3A4&viewport=366%2C484%2C0.04&scaling=min-zoom&starting-point-node-id=2%3A4"><img
-                            width="40%" src="img/files.png" alt="file1">
-                    </a>
-                    <h3>Redesign web Pegipegi.com</h3>
+                    href="https://www.figma.com/proto/9gyxHzAnVNlMI3xUThNmmy/redesign-pegipegi.com-kelompok-12?page-id=0%3A1&node-id=2%3A4&viewport=366%2C484%2C0.04&scaling=min-zoom&starting-point-node-id=2%3A4"><img
+                        width="40%" src="img/files.png" alt="file1">
+                </a>
+                <h3>Redesign web Pegipegi.com</h3>
                 </div>
-                <div class="col-md-4" data-aos="fade-left">
+                <div class="col-md-6 align-self-center" data-aos="zoom-in-left" data-aos-duration="1500">
                     <a href="https://maboling.shennx.net/index.html"><img width="40%" src="img/files.png" alt="files2">
                     </a>
                     <h3>Make web Maboling
@@ -206,6 +208,7 @@
         </div>
     </section>
 
+
     <!-- footer -->
     <footer class="pb-3 bg-black">
         <p style="text-align: center; background-color: #00000036; color: white;">Created by <a
@@ -215,7 +218,6 @@
     <!-- footer -->
 
     <!-- back to top -->
-    <div id="prepre-loader"></div>
     <button class="back-to-top">
         <a href="#" class="back-to-top d-flex align-items-center justify-content-center">
             <i text-danger class="bi bi-caret-up-square-fill"></i>
