--- a/porto.html
+++ b/porto.html
@@ -194,7 +194,7 @@
         <div class="d-flex">
             <div class="container mb-5 mt-5 justify-content-center text-center" data-aos="zoom-out-up"
                 data-aos-duration="1000">
-                <h2 class="mb-3" style="color: bisque;">few my photography adventure</h2>
+                <h2 class="mb-3" style="color: bisque;">few of my photography adventure</h2>
                 <div class="gallery">
                     <div style="background-image: url('img/img1.jpg');"></div>
                     <div style="background-image: url('img/img2.jpg');"></div>
