--- a/porto.html
+++ b/porto.html
@@ -1,45 +1,44 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- font -->
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
+        @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap");
     </style>
 
     <!-- boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
 
     <!-- css -->
-    <link rel="stylesheet" href="css/porto.css">
+    <link rel="stylesheet" href="css/porto.css" />
 
     <!-- AOS -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
     <!-- link icon -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
 
     <!-- icon -->
-    <link rel="icon" href="img/b2c8b647f285dbc9d29a87c833142419.jpg">
+    <link rel="icon" href="img/b2c8b647f285dbc9d29a87c833142419.jpg" />
 
     <title>John Calvin Portofolio's</title>
 </head>
 
 <body>
-
+    <div class="container">
     <!-- Pre-pre-loader -->
     <div id="pre-loader" class="preload-content">
         <div class="pre-loader1"></div>
     </div>
 
-
     <video loop autoplay muted class="fullscreen-bg" src="vid/vid-bg.mp4"></video>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg fixed-top" style="background-color: white;">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-scrolled" style="background-color: white;">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">John Calvin Portofolio |</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -47,7 +46,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav justify-content-end">
                     <li class="nav-item">
                         <a class="nav-link hover" aria-current="page" href="#">Home</a>
                     </li>
@@ -58,6 +57,9 @@
                         <a class="nav-link hover" href="#skill">Skill's</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link hover" href="#gallery">Gallery</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link hover" href="#project">Project</a>
                     </li>
                     <li class="nav-item dropdown">
@@ -66,76 +68,99 @@
                             Media Social
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item hover"
+                            <li>
+                                <a class="dropdown-item hover"
                                     href="https://www.instagram.com/johncalvi.nn/">Instagram</a>
                             </li>
-                            <li><a class="dropdown-item hover"
+                            <li>
+                                <a class="dropdown-item hover"
                                     href="https://www.facebook.com/john.calvin.1232/">Facebook</a>
                             </li>
-                            <li><a class="dropdown-item hover" href="https://github.com/Fr3ezy">Github</a></li>
+                            <li>
+                                <a class="dropdown-item hover" href="https://github.com/Fr3ezy">Github</a>
+                            </li>
                         </ul>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+
     <!-- Navbar end -->
 
     <!-- Profilepicture -->
     <section>
         <div class="card-rgb mx-auto mt-5">
-            <img class="mx-auto rounded-4" width="95%" height="95%" src="img/foto.jpg" alt="fotopp">
+            <img class="mx-auto rounded-4" width="95%" height="95%" src="img/foto.jpg" alt="fotopp" />
         </div>
         <div class="text-white text-center">
             <h1>John Calvin Portofolio's</h1>
-            <h3 style="color: bisque;">Bina Nusantara Student</h3>
-            <h3 style="color: bisque;">Front End Developer at PT. Dire Teknologi Bersama</h3>
+            <h3 style="color: bisque">
+                Bina Nusantara Student
+            </h3>
+            <h3 style="color: bisque">
+                Front End Developer at PT. Dire Teknologi Bersama
+            </h3>
+        </div>
+        <div class="d-flex justify-content-center">
+            <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+            <lottie-player src="https://lottie.host/6b4f2dbe-0b31-4290-8a21-b820b002b493/JTqxJ811BF.json"
+                background="transparent" speed="1" style="width: 200px; height: 300px;" loop autoplay></lottie-player>
         </div>
     </section>
 
     <!-- about me -->
     <section id="aboutme" data-aos="zoom-in-up">
-        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+        <ul class="nav nav-pills justify-content-center mb-3" id="pills-tab" role="tablist">
             <li class="nav-item" role="presentation">
                 <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home"
-                    type="button" role="tab" aria-controls="pills-home" aria-selected="true">Where I From ???</button>
+                    type="button" role="tab" aria-controls="pills-home" aria-selected="true">
+                    Where I From ???
+                </button>
             </li>
             <li class="nav-item" role="presentation">
                 <button class="nav-link" id="pills-cv-tab" data-bs-toggle="pill" data-bs-target="#pills-cv"
-                    type="button" role="tab" aria-controls="pills-cv" aria-selected="false">CV</button>
+                    type="button" role="tab" aria-controls="pills-cv" aria-selected="false">
+                    CV
+                </button>
             </li>
             <li class="nav-item" role="presentation">
                 <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile"
-                    type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Profile</button>
+                    type="button" role="tab" aria-controls="pills-profile" aria-selected="false">
+                    Profile
+                </button>
             </li>
             <li class="nav-item" role="presentation">
                 <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact"
-                    type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Contact</button>
+                    type="button" role="tab" aria-controls="pills-contact" aria-selected="false">
+                    Contact
+                </button>
             </li>
         </ul>
-        <div class="tab-content" id="pills-tabContent" style="color: bisque;">
+        <div class="tab-content" id="pills-tabContent" style="color: bisque">
             <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
-                <h2 style="color: bisque;">I'm From Pekalongan City, Indonesia</h2>
+                <h2 style="color: bisque">I'm From Pekalongan City, Indonesia</h2>
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63375.286073976764!2d109.63939800239498!3d-6.895940718063823!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e70242ca490fe13%3A0xc0c68a126b258cb6!2sPekalongan%2C%20Kota%20Pekalongan%2C%20Jawa%20Tengah!5e0!3m2!1sid!2sid!4v1665133251232!5m2!1sid!2sid"
-                    width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    width="100%" height="450" style="border: 0" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="tab-pane fade text-center" id="pills-cv" role="tabpanel" aria-labelledby="pills-cv-tab">
                 <span>You can download My CV
                     <a
-                        href="https://binusianorg-my.sharepoint.com/personal/john_widianto_binus_ac_id/_layouts/15/guestaccess.aspx?docid=0a04c13035dbd48b8aa193b41e6ee5e3b&authkey=ATpgb_wSKVAWcNfnfN0iJMg&e=GRPJRt">here<br><img
-                            width="20%" src="img/pdf.png"></a></span>
+                        href="https://binusianorg-my.sharepoint.com/personal/john_widianto_binus_ac_id/_layouts/15/guestaccess.aspx?docid=0a04c13035dbd48b8aa193b41e6ee5e3b&authkey=ATpgb_wSKVAWcNfnfN0iJMg&e=GRPJRt">here<br /><img
+                            width="20%" src="img/pdf.png" /></a></span>
             </div>
             <div class="tab-pane fade text-center" id="pills-profile" role="tabpanel"
                 aria-labelledby="pills-profile-tab">
-                <span>Hello everyone i'm John Calvin Widianto, who like design and computer.
-                    <br>Pekalongan is city where i born and grow, i live at Pekalongan until senior sigh school before i
-                    studied at Bina Nusantara University.
-                    <br>I like to play computer and like to solve the problem what i found.
+                <span>Hello everyone i'm John Calvin Widianto, who like design and
+                    computer. <br />Pekalongan is city where i born and grow, i live at
+                    Pekalongan until senior sigh school before i studied at Bina
+                    Nusantara University. <br />I like to play computer and like to
+                    solve the problem what i found.
                     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
                     <lottie-player class="mx-auto" src="https://assets4.lottiefiles.com/packages/lf20_KEahK5k9Mf.json"
-                        background="transparent" speed="1" style="width: 300px; height: 300px;" loop
+                        background="transparent" speed="1" style="width: 300px; height: 300px" loop
                         autoplay></lottie-player>
                 </span>
             </div>
@@ -147,17 +172,17 @@
                         </div>
                         <div class="col-md-4 align-self-start">
                             <a href="mailto:calvinjohn810@yahoo.com"><img width="40%" src="img/email.png"
-                                    alt="main email"></a>
+                                    alt="main email" /></a>
                             <h4>Main Email</h4>
                         </div>
                         <div class="col-md-4 align-self-center">
                             <a href="mailto:john.widianto@binus.ac.id"><img width="40%" src="img/email.png"
-                                    alt="student email"></a>
+                                    alt="student email" /></a>
                             <h4>Student Email</h4>
                         </div>
                         <div class="col-md-4 align-self-end">
                             <a href="https://www.linkedin.com/in/john-calvin-widianto"><img width="40%"
-                                    src="img/linkedin.png" alt="linkedin acc"></a>
+                                    src="img/linkedin.png" alt="linkedin acc" /></a>
                             <h4>LinkedIn</h4>
                         </div>
                     </div>
@@ -174,15 +199,15 @@
                     <h2 style="color: bisque">Some Skill's</h2>
                 </div>
                 <div class="col-md-4 align-self-start" data-aos="zoom-in" data-aos-duration="1500">
-                    <img width="40%" src="img/photoshop.png" alt="logo psd">
+                    <img width="40%" src="img/photoshop.png" alt="logo psd" />
                     <h3>Photoshop</h3>
                 </div>
                 <div class="col-md-4 align-self-center" data-aos="zoom-in" data-aos-duration="1500">
-                    <img width="40%" src="img/teamwork.png" alt="teamwork">
+                    <img width="40%" src="img/teamwork.png" alt="teamwork" />
                     <h3>Easy Team Work</h3>
                 </div>
                 <div class="col-md-4 align-self-end" data-aos="zoom-in" data-aos-duration="1500">
-                    <img width="80%" src="img/editing.png" alt="editing">
+                    <img width="80%" src="img/editing.png" alt="editing" />
                     <h3>Like Editing, Design and Photography</h3>
                 </div>
             </div>
@@ -190,56 +215,63 @@
     </section>
 
     <!-- Colloum Photography -->
-    <section id="my-pictuce" class="d-none d-md-block">
+    <section id="gallery" class="d-none d-md-block">
         <div class="d-flex">
             <div class="container mb-5 mt-5 justify-content-center text-center" data-aos="zoom-out-up"
                 data-aos-duration="1000">
-                <h2 class="mb-3" style="color: bisque;">few of my photography adventure</h2>
+                <h2 class="mb-3" style="color: bisque">
+                    Photography Adventure
+                </h2>
                 <div class="gallery">
-                    <div style="background-image: url('img/img1.jpg');"></div>
-                    <div style="background-image: url('img/img2.jpg');"></div>
-                    <div style="background-image: url('img/img3.jpg');"></div>
-                    <div style="background-image: url('img/img4.jpg');"></div>
-                    <div style="background-image: url('img/img5.jpg');"></div>
-                    <div style="background-image: url('img/img6.jpg');"></div>
-                    <div style="background-image: url('img/img7.jpg');"></div>
+                    <div style="background-image: url('img/img1.jpg')"></div>
+                    <div style="background-image: url('img/img2.jpg')"></div>
+                    <div style="background-image: url('img/img3.jpg')"></div>
+                    <div style="background-image: url('img/img4.jpg')"></div>
+                    <div style="background-image: url('img/img5.jpg')"></div>
+                    <div style="background-image: url('img/img6.jpg')"></div>
+                    <div style="background-image: url('img/img7.jpg')"></div>
                 </div>
             </div>
         </div>
     </section>
-
 
     <!-- Colloum Project -->
     <section id="project">
         <div class="container mb-5 mt-5 justify-content-center">
             <div class="row text-center">
                 <div class="col-mb-4" data-aos="zoom-in" data-aos-duration="1000">
-                    <h2 style="color: bisque">This is some project i've made when in college</h2>
+                    <h2 style="color: bisque">
+                        This is some project i've made when in college
+                    </h2>
                 </div>
                 <div class="col-md-6 align-self-start" data-aos="zoom-in-right" data-aos-duration="1500">
                     <a
                         href="https://www.figma.com/proto/9gyxHzAnVNlMI3xUThNmmy/redesign-pegipegi.com-kelompok-12?page-id=0%3A1&node-id=2%3A4&viewport=366%2C484%2C0.04&scaling=min-zoom&starting-point-node-id=2%3A4"><img
-                            width="40%" src="img/files.png" alt="file1">
+                            width="40%" src="img/files.png" alt="file1" />
                     </a>
                     <h3>Redesign web Pegipegi.com</h3>
                 </div>
                 <div class="col-md-6 align-self-center" data-aos="zoom-in-left" data-aos-duration="1500">
-                    <a href="https://maboling.shennx.net/index.html"><img width="40%" src="img/files.png" alt="files2">
+                    <a href="https://maboling.shennx.net/index.html"><img width="40%" src="img/files.png"
+                            alt="files2" />
                     </a>
-                    <h3>Make web Maboling
-                        <br> (Entrepreneurship)
+                    <h3>
+                        Make web Maboling <br />
+                        (Entrepreneurship)
                     </h3>
                 </div>
             </div>
         </div>
     </section>
-
+</div>
 
     <!-- footer -->
     <footer class="pb-3 bg-black">
-        <p style="text-align: center; background-color: #00000036; color: white;">Created by <a
-                style="font-weight: bold;" href="https://www.instagram.com/johncalvi.nn/">John Calvin</a> and with full
-            of <i class="bi bi-balloon-heart-fill text-danger"></i></p>
+        <p style="text-align: center; background-color: #00000036; color: white">
+            Created by
+            <a style="font-weight: bold" href="https://www.instagram.com/johncalvi.nn/">John Calvin</a>
+            and with full of <i class="bi bi-balloon-heart-fill text-danger"></i>
+        </p>
     </footer>
     <!-- footer -->
 
@@ -250,7 +282,6 @@
         </a>
     </button>
 
-
     <!-- AOS -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
@@ -259,11 +290,10 @@
 
     <!-- script bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous">
-        </script>
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
 
     <script src="js/porto.js"></script>
-
 </body>
 
 </html>
