--- a/porto.html
+++ b/porto.html
@@ -57,6 +57,9 @@
                         <a class="nav-link hover" href="#skill">Skill's</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link hover" href="#spotify">Spotify</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link hover" href="#gallery">Gallery</a>
                     </li>
                     <li class="nav-item">
@@ -209,6 +212,26 @@
                 <div class="col-md-4 align-self-end" data-aos="zoom-in" data-aos-duration="1500">
                     <img width="80%" src="img/editing.png" alt="editing" />
                     <h3>Like Editing, Design and Photography</h3>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Colloum spotify -->
+    <section id="spotify">
+        <div class="container mb-5 mt-5 justify-content-center">
+            <div class="row text-center">
+                <div class="col-mb-4" data-aos="zoom-in" data-aos-duration="1000">
+                    <h2 style="color: bisque">Some Skill's</h2>
+                </div>
+                <div class="col-md-4 align-self-start" data-aos="zoom-in" data-aos-duration="1500">
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/79hBEdbCqwW1vSmPf9bY7a?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                </div>
+                <div class="col-md-4 align-self-center" data-aos="zoom-in" data-aos-duration="1500">
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6prqKJdpYfuOAPWxWdrMny?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                </div>
+                <div class="col-md-4 align-self-end" data-aos="zoom-in" data-aos-duration="1500">
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4REDkTyJk7H7BwWf8HBT0Y?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 </div>
             </div>
         </div>
