--- a/porto.html
+++ b/porto.html
@@ -222,7 +222,7 @@
         <div class="container mb-5 mt-5 justify-content-center">
             <div class="row text-center">
                 <div class="col-mb-4" data-aos="zoom-in" data-aos-duration="1000">
-                    <h2 style="color: bisque">Some Skill's</h2>
+                    <h2 style="color: bisque">Spotify Playlist</h2>
                 </div>
                 <div class="col-md-4 align-self-start" data-aos="zoom-in" data-aos-duration="1500">
                     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/79hBEdbCqwW1vSmPf9bY7a?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
