Update snow WKWKWKWKKK

--- a/porto.html
+++ b/porto.html
@@ -288,6 +288,39 @@
     </section>
 </div>
 
+<!-- snow -->
+    <div class="snowflake">
+    ❅
+    </div>
+    <div class="snowflake">
+    ❅
+    </div>
+    <div class="snowflake">
+    ❆
+    </div>
+    <div class="snowflake">
+    ❄
+    </div>
+    <div class="snowflake">
+    ❅
+    </div>
+    <div class="snowflake">
+    ❆
+    </div>
+    <div class="snowflake">
+    ❄
+    </div>
+    <div class="snowflake">
+    ❅
+    </div>
+    <div class="snowflake">
+    ❆
+    </div>
+    <div class="snowflake">
+    ❄
+    </div>
+<!-- end snow -->
+
     <!-- footer -->
     <footer class="pb-3 bg-black">
         <p style="text-align: center; background-color: #00000036; color: white">
@@ -309,25 +342,6 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
-    </script>
-
-    <!-- navbar scrolled -->
-    <script>
-        window.addEventListener("scroll", function() {
-            if (window.scrollY > 10) {
-                document.querySelector(".navbar").classList.add("navbar-scrolled");
-            } else {
-                document.querySelector(".navbar").classList.remove("navbar-scrolled");
-            }
-        });
-
-        </script>
-        <script>
-            // Ganti Background mobile navbar
-        $(".navbar-toggler").click(function() {
-            $(".navbar").addClass("navbar-scrolled");
-            $(".nav-item").addClass("text-center");
-        })
     </script>
 
     <!-- script bootstrap -->
